@@ -13,9 +13,6 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    junitVersion = '5.8.1'
-}
 
 sourceCompatibility = '21'
 targetCompatibility = '21'
@@ -35,32 +32,16 @@ javafx {
 }
 
 dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
 }
 
 test {
     useJUnitPlatform()
 }
 
-tasks.test {
-    inputs.property("moduleName", "org.example.milleniumproject")
 
-    doFirst {
-        def moduleName = inputs.properties["moduleName"]
-        def classpathString = files(project.sourceSets.test.output).asPath
-
-        println "classpathString: ${classpathString}"
-
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'org.junit.jupiter.api',
-                '--add-reads', "${moduleName}=org.junit.jupiter.api",
-                '--patch-module', "${moduleName}=${classpathString}"
-        ]
-        classpath = files()
-    }
-}
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
